--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,11 +26,100 @@
   </head>
   <body class="inter-font">
     <header>
-        <nav>
-            
-        </nav>
+      <nav class="container mx-auto mt-4">
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <a class=""
+              ><img src="./Images/avada-logo-svg.svg" alt="" class="w-36"
+            /></a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 font-semibold text-lg">
+              <li>
+                <details>
+                  <summary>Avada</summary>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </details>
+              </li>
+              <li>
+                <details>
+                  <summary>Avada for</summary>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </details>
+              </li>
+              <li><a>Hosting</a></li>
+              <li><a>Customization</a></li>
+              <li>
+                <details>
+                  <summary>Resources</summary>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </details>
+              </li>
+            </ul>
+          </div>
+          <div class="navbar-end">
+            <div>
+              <a
+                class="py-4 px-6 outline outline-1 rounded-md text-lg font-semibold hover:bg-slate-900 hover:text-white hidden lg:block"
+                ><i class="fa-solid fa-star"></i> My Avada</a
+              >
+            </div>
+            <div class="dropdown relative">
+              <div
+                tabindex="0"
+                role="button"
+                class="btn btn-ghost lg:hidden text-3xl"
+              >
+                <i class="fa-solid fa-bars"></i>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow absolute right-0"
+              >
+              <li >
+                <details>
+                  <summary>Avada</summary>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </details>
+              </li>
+              <li>
+                <details>
+                  <summary>Avada for</summary>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </details>
+              </li>
+              <li><a>Hosting</a></li>
+              <li><a>Customization</a></li>
+              <li>
+                <details>
+                  <summary>Resources</summary>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </details>
+              </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
-
 
     <style>
       .inter-font {
