--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               ><img src="./Images/avada-logo-svg.svg" alt="" class="w-36"
             /></a>
           </div>
-          <div class="navbar-center hidden lg:flex">
+          <div class="navbar-center hidden xl:flex">
             <ul class="menu menu-horizontal px-1 font-semibold text-lg">
               <li>
                 <details>
