--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
       </nav>
       <!-- hero section  -->
       <div class="flex flex-col lg:flex-row items-center mt-12">
-        <div class="space-y-9  2xl:space-y-11 lg:w-2/5 w-full">
+        <div class="space-y-9 2xl:space-y-11 lg:w-2/5 w-full">
           <h1 class="text-5xl md:text-6xl font-bold">
-            The Ultimate<br class="hidden lg:block" /> Portfolio<br class="hidden lg:block" />
+            The Ultimate<br class="hidden lg:block" />
+            Portfolio<br class="hidden lg:block" />
             Website Builder
           </h1>
           <p class="text-gray-500 text-lg">
@@ -140,10 +141,10 @@
             <div class="space-y-2">
               <h3 class="text-3xl font-bold">975k+</h3>
               <p class="text-gray-500 text-sm">People Trust Avada</p>
-            </div >
+            </div>
             <div class="space-y-2 mb-5 md:mb-0">
               <h3 class="text-3xl font-bold">26k+</h3>
-              <p class="text-gray-500 text-sm ">Average 5-Star Reviews</p>
+              <p class="text-gray-500 text-sm">Average 5-Star Reviews</p>
             </div>
           </div>
         </div>
@@ -153,6 +154,46 @@
       </div>
     </header>
 
+    <main class="container mx-auto px-7 lg:px-20 mt-16">
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-11 text-center ">
+        <!-- card 1 -->
+        <div class="px-11 py-10 bg-[#FFE979] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#fceb94] transition-all ease-out duration-500 h-[630px]">
+          <h4 class="text-xl font-semibold">For Beginners</h4>
+          <h2 class="text-3xl font-semibold">Launch Your First Website</h2>
+          <img src="./Images/for-beginners@2x.jpg" alt="" class="w-3/5 mx-auto">
+          <div class="space-x-2 space-y-2">
+            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg ">Visual Builder</button>
+            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg">Documentation</button>
+            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg">Support</button>
+            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg">Prebuild Website</button>
+          </div>
+        </div>
+        <!-- card 2  -->
+        <div class="px-11 py-10 bg-[#B7F598] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#bffca1] transition-all ease-out duration-500 h-[630px]">
+          <h4 class="text-xl font-semibold">For Beginners</h4>
+          <h2 class="text-3xl font-semibold">Launch Your First Website</h2>
+          <img src="./Images/for-marketers@2x.jpg" alt="" class="w-3/5 mx-auto">
+          <div class="space-x-2 space-y-2">
+            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg ">Visual Builder</button>
+            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg">Documentation</button>
+            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg">Support</button>
+            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg">Prebuild Website</button>
+          </div>
+        </div>
+        <!-- card 3  -->
+        <div class="px-11 py-10 bg-[#7ED5F0] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#87ddf7] transition-all ease-out duration-500 h-[630px]">
+          <h4 class="text-xl font-semibold">For Beginners</h4>
+          <h2 class="text-3xl font-semibold">Launch Your First Website</h2>
+          <img src="./Images/for-pro-2@2x.jpg" alt="" class="w-3/5 mx-auto">
+          <div class="space-x-2 space-y-2">
+            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg ">Visual Builder</button>
+            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg">Documentation</button>
+            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg">Support</button>
+            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg">Prebuild Website</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <style>
       .inter-font {
         font-family: "Inter", sans-serif;
