add second section

--- a/index.html
+++ b/index.html
@@ -155,44 +155,111 @@
     </header>
 
     <main class="container mx-auto px-7 lg:px-20 mt-16">
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-11 text-center ">
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-11 text-center">
         <!-- card 1 -->
-        <div class="px-11 py-10 bg-[#FFE979] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#fceb94] transition-all ease-out duration-500 h-[630px]">
+        <div
+          class="px-11 py-10 bg-[#FFE979] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#fceb94] transition-all ease-out duration-500 h-[630px]"
+        >
           <h4 class="text-xl font-semibold">For Beginners</h4>
           <h2 class="text-3xl font-semibold">Launch Your First Website</h2>
-          <img src="./Images/for-beginners@2x.jpg" alt="" class="w-3/5 mx-auto">
+          <img
+            src="./Images/for-beginners@2x.jpg"
+            alt=""
+            class="w-3/5 mx-auto"
+          />
           <div class="space-x-2 space-y-2">
-            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg ">Visual Builder</button>
-            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg">Documentation</button>
-            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg">Support</button>
-            <button class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg">Prebuild Website</button>
+            <button
+              class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg"
+            >
+              Visual Builder
+            </button>
+            <button
+              class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg"
+            >
+              Documentation
+            </button>
+            <button
+              class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg"
+            >
+              Support
+            </button>
+            <button
+              class="p-3 bg-[#E0BB00] text-white text-sm font-bold rounded-lg"
+            >
+              Prebuild Website
+            </button>
           </div>
         </div>
         <!-- card 2  -->
-        <div class="px-11 py-10 bg-[#B7F598] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#bffca1] transition-all ease-out duration-500 h-[630px]">
+        <div
+          class="px-11 py-10 bg-[#B7F598] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#bffca1] transition-all ease-out duration-500 h-[630px]"
+        >
           <h4 class="text-xl font-semibold">For Beginners</h4>
           <h2 class="text-3xl font-semibold">Launch Your First Website</h2>
-          <img src="./Images/for-marketers@2x.jpg" alt="" class="w-3/5 mx-auto">
+          <img
+            src="./Images/for-marketers@2x.jpg"
+            alt=""
+            class="w-3/5 mx-auto"
+          />
           <div class="space-x-2 space-y-2">
-            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg ">Visual Builder</button>
-            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg">Documentation</button>
-            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg">Support</button>
-            <button class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg">Prebuild Website</button>
+            <button
+              class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg"
+            >
+              Visual Builder
+            </button>
+            <button
+              class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg"
+            >
+              Documentation
+            </button>
+            <button
+              class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg"
+            >
+              Support
+            </button>
+            <button
+              class="p-3 bg-[#65BA3B] text-white text-sm font-bold rounded-lg"
+            >
+              Prebuild Website
+            </button>
           </div>
         </div>
         <!-- card 3  -->
-        <div class="px-11 py-10 bg-[#7ED5F0] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#87ddf7] transition-all ease-out duration-500 h-[630px]">
+        <div
+          class="px-11 py-10 bg-[#7ED5F0] rounded-lg flex flex-col justify-between scale-95 hover:scale-100 hover:bg-[#87ddf7] transition-all ease-out duration-500 h-[630px]"
+        >
           <h4 class="text-xl font-semibold">For Beginners</h4>
           <h2 class="text-3xl font-semibold">Launch Your First Website</h2>
-          <img src="./Images/for-pro-2@2x.jpg" alt="" class="w-3/5 mx-auto">
+          <img src="./Images/for-pro-2@2x.jpg" alt="" class="w-3/5 mx-auto" />
           <div class="space-x-2 space-y-2">
-            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg ">Visual Builder</button>
-            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg">Documentation</button>
-            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg">Support</button>
-            <button class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg">Prebuild Website</button>
+            <button
+              class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg"
+            >
+              Visual Builder
+            </button>
+            <button
+              class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg"
+            >
+              Documentation
+            </button>
+            <button
+              class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg"
+            >
+              Support
+            </button>
+            <button
+              class="p-3 bg-[#1698C0] text-white text-sm font-bold rounded-lg"
+            >
+              Prebuild Website
+            </button>
           </div>
         </div>
       </div>
+
+      <section class="mt-28">
+        <h3 class="text-center font-semibold text-5xl mb-4">Design Anything, Build Everything</h3>
+        <p class="text-center text-lg mb-8">Design and launch your website fast & no coding knowledge is required.</p>
+      </section>
     </main>
     <style>
       .inter-font {
